dec pcn we need proof page updated

--- a/app/views/v6-pcn-decs/we-need-proof.html
+++ b/app/views/v6-pcn-decs/we-need-proof.html
@@ -49,8 +49,7 @@
 
 
 
-    <p>We need one example of proof from the following list. Your proof must have been valid at the time you claimed a
-      free NHS prescription.</p>
+    <p>We need one example of proof from the following list. Your proof must have been valid at the time you claimed free or reduced cost NHS dental treatment.</p>
 
 
     <p>Select the reason you were entitled to help with your health costs to see what you need to send:</p>
@@ -69,24 +68,33 @@
     <details class="nhsuk-details">
       <summary class="nhsuk-details__summary">
         <span class="nhsuk-details__summary-text">
-          You were getting Income Support or income-related Employment and Support Allowance (ESA)
+          You were getting Income Support
         </span>
       </summary>
       <div class="nhsuk-details__text">
 
-        <p>A clear image of every page of your Income Support or ESA award letter.</p>
-        <p>If you're sending an image of your ESA award letter it needs to show that you receive income-related ESA.</p>
+        <p>A clear image of every page of your Income Support award letter.</p>
       </div>
     </details>
 
     <details class="nhsuk-details">
       <summary class="nhsuk-details__summary">
         <span class="nhsuk-details__summary-text">
-          You were named on your partner's Pension Credit Guarantee Credit award
+          You were getting income-related Employment and Support Allowance (ESA)
         </span>
       </summary>
       <div class="nhsuk-details__text">
-        <p>A clear image of your partner's Pension Credit Guarantee Credit award letter.</p>
+        <p>A clear image of every page of your ESA award letter. The image needs to show that your ESA was income-related.</p>
+      </div>
+    </details>
+    <details class="nhsuk-details">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          You were getting Pension Credit Guarantee Credit 
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+        <p>A clear image of your or your partner's Pension Credit Guarantee Credit award letter.</p>
       </div>
     </details>
     <details class="nhsuk-details">
@@ -97,15 +105,14 @@
       <div class="nhsuk-details__text">
         <p>A clear image of every page of your Universal Credit letter or statement.</p>
         <p>Your Universal Credit exemption must have been valid at the time you claimed a free prescription.</p>
-        <p>You are entitled to claim free or reduced cost NHS dental treatment if your earnings during your most recent assessment period
-          were:</p>
+        <p>You are entitled to claim free NHS dental treatment if your earnings during your most recent assessment period were:</p>
         <ul>
           <li>£435 or less</li>
           <li>£935 or less if your Universal Credit includes a payment for a child or you have limited capability for
             work or work-related activity</li>
         </ul>
         <p>'Most recent assessment period' means the assessment period that ended immediately before the date you
-          claimed free or reduced cost NHS dental treatment. It runs for a calendar month.</p>
+          claimed free NHS prescriptions. It runs for a calendar month.</p>
         <p>If you claim Universal Credit as a couple, the earnings limit applies to the joint income of you and your
           partner.</p>
 
@@ -118,7 +125,7 @@
     <details class="nhsuk-details">
       <summary class="nhsuk-details__summary">
         <span class="nhsuk-details__summary-text">
-          You had a valid exemption certificate or a Prescription Prepayment Certificate
+          You had a valid exemption certificate
         </span>
       </summary>
       <div class="nhsuk-details__text">
@@ -128,11 +135,26 @@
         </p>
         <p>You are entitled to free or reduced cost NHS dental treatment if you have a valid:</p>
         <ul>
-          <li>medical exemption certificate</li>
-          <li>maternity exemption certificate</li>
-          <li>HC2 certificate</li>
+          <li>HC2 certificate (full help with health costs)</li>
+          <li>HC3 certificate (limited help with health costs)</li>
           <li>NHS Tax Credit Exemption Certificate</li>
-          <li>Prescription Prepayment Certificate</li>
+        </ul>
+      </div>
+    </details>
+
+    <details class="nhsuk-details">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          You were pregnant or had given birth in the previous 12 months
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+        <p>A clear image of either:</p>
+        <ul>
+          <li>a MatB1 form issued by a GP or registered midwife</li>
+          <li>a Notification of Birth form issued by a registered midwife</li>
+          <li>a birth or stillbirth certificate</li>
+          <li>your maternity exemption certificate - this will either be a paper certificate you were sent by post or a digital certificate you were sent by email</li>
         </ul>
       </div>
     </details>
@@ -146,10 +168,10 @@
     <p>Take a photo, scan or screenshot of your proof. If you're taking a photo, use a mobile phone or digital camera.
     </p>
     <p>Check the image is clear and you can read the information, then send it as an email attachment to: <a
-        href="">nhsbsa.pecs@nhsbsa.nhs.uk</a></p>
+        href="">nhsbsa.decs@nhsbsa.nhs.uk</a></p>
     <p>You must include your:</p>
     <ul>
-      <li>reference number 11193492846</li>
+      <li>reference number 522585924809</li>
       <li>full name</li>
       <li>date of birth</li>
       <li>address including postcode</li>
@@ -158,7 +180,7 @@
     <h3>Sending by post</h3>
     <p>Send a photocopy of your proof to us and include your:</p>
     <ul>
-      <li>reference number 11193492846</li>
+      <li>reference number 522585924809</li>
       <li>full name</li>
       <li>date of birth</li>
       <li>address including postcode</li>
@@ -167,7 +189,7 @@
 
     <div class="nhsuk-inset-text">
       <span class="nhsuk-u-visually-hidden">Information: </span>
-      <p>Prescription Exemption Checking Team</br>
+      <p>Dental Exemption Checking Team</br>
         NHSBSA</br>
         Bridge House</br>
         152 Pilgrim Street</br>
