HC3 recalculated page added to adhoc

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -693,18 +693,33 @@ NHS.UK prototype kit
                             <td class="nhsuk-table__cell">We found a HC3 certificate with a lower contribution amount</td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower-pcn">We found a hc3 cert lower</a>
                             </td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
-                                DECS
-                                </strong></td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with same contribution amount</td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same-pcn">We found a hc3 cert same</a>
                             </td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
-                                DECS
-                                </strong></td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We found a HC3 certificate - recalculated</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-recalculated">We found a HC3 certificate - recalculated</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
                         </tr>
                         
                         <tr role="row" class="nhsuk-table__row">
