Recalc adhoc hc3 page content updated

--- a/app/views/v6-pcn-decs/we-found-a-hc3-cert-recalculated.html
+++ b/app/views/v6-pcn-decs/we-found-a-hc3-cert-recalculated.html
@@ -3,7 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-We found a HC3 certificate and have recalculated your penalty charge
+We found an HC3 certificate and have recalculated your penalty charge - Confirm your entitlement - Respond to your letter
 {% endblock %}
 
 {% block outerContent %}
@@ -15,7 +15,7 @@ We found a HC3 certificate and have recalculated your penalty charge
   <div class="nhsuk-grid-column-two-thirds">
     <span class="nhsuk-caption-l">Pay a Penalty Charge Notice</span>
     <h1>
-      We found a HC3 certificate and have recalculated your penalty charge
+      We found an HC3 certificate and have recalculated your penalty charge
     </h1>
     
     <p>You now owe a different amount.</p>
@@ -33,7 +33,7 @@ We found a HC3 certificate and have recalculated your penalty charge
               Dental treatment charges
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £23.80
+              £14.30
             </dd>
 
           </div>
@@ -43,7 +43,7 @@ We found a HC3 certificate and have recalculated your penalty charge
                HC3 Contribution
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £5.00
+              £498.45
             </dd>
 
           </div>
@@ -52,7 +52,7 @@ We found a HC3 certificate and have recalculated your penalty charge
               Amount you should have paid
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £5.00
+              £14.30
             </dd>
 
           </div>
@@ -67,10 +67,10 @@ We found a HC3 certificate and have recalculated your penalty charge
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Outstanding Treatment Charge
+              Outstanding treatment charge
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £23.80
+              £14.30
             </dd>
 
           </div>
@@ -79,7 +79,7 @@ We found a HC3 certificate and have recalculated your penalty charge
               Penalty Charge
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £100.00
+              £71.50
             </dd>
 
         </dl>
@@ -87,7 +87,7 @@ We found a HC3 certificate and have recalculated your penalty charge
     
         </dl>
         <p style="font-weight: bold; font-size:36px;">
-         Total amount to pay: £123.80
+         Total amount to pay: £85.80
 
         </p>
 
@@ -109,7 +109,7 @@ We found a HC3 certificate and have recalculated your penalty charge
           <div class="nhsuk-radios__item">
             <input class="nhsuk-radios__input" id="example-hints-1" name="example-hints" type="radio" value="gateway" aria-describedby="example-hints-1-item-hint">
             <label class="nhsuk-label nhsuk-radios__label" for="example-hints-1">
-              Pay the total amount of £123.80
+              Pay the total amount of £85.80
             </label>
             <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-1-item-hint">
             
@@ -119,10 +119,20 @@ We found a HC3 certificate and have recalculated your penalty charge
           <div class="nhsuk-radios__item">
             <input class="nhsuk-radios__input" id="example-hints-2" name="example-hints" type="radio" value="verify" aria-describedby="example-hints-2-item-hint">
             <label class="nhsuk-label nhsuk-radios__label" for="example-hints-2">
-              Confirm my entitlement
+              Confirm I was entitled to free NHS dental treatment
             </label>
             <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-2-item-hint">
-              If you were pregnant or getting benefits at the time you claimed, you can continue your challenge. You may have been entitled to free dental treatment.
+              If you were pregnant or getting benefits at the time you claimed, you may have been entitled to free NHS dental treatment.
+            </div>
+          </div>
+
+          <div class="nhsuk-radios__item">
+            <input class="nhsuk-radios__input" id="example-hints-3" name="example-hints" type="radio" value="not" aria-describedby="example-hints-3-item-hint">
+            <label class="nhsuk-label nhsuk-radios__label" for="example-hints-3">
+              I was not entitled to free NHS dental treatment but have an exceptional reason why I made the claim
+            </label>
+            <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-3-item-hint">
+              If you were not entitled to free NHS dental treatment but have an exceptional reason why you made the claim, you can ask us to review your Penalty Charge Notice. Find out if you can ask for a review.
             </div>
           </div>
     
