Fixed recalculate page with newe component

--- a/app/views/v6-pcn-decs/we-found-a-hc3-cert-recalculated.html
+++ b/app/views/v6-pcn-decs/we-found-a-hc3-cert-recalculated.html
@@ -96,7 +96,6 @@ We found an HC3 certificate and have recalculated your penalty charge - Confirm 
    
 
     <div class="nhsuk-form-group">
-
       <fieldset class="nhsuk-fieldset">
         <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
           <h1 class="nhsuk-fieldset__heading">
@@ -125,21 +124,22 @@ We found an HC3 certificate and have recalculated your penalty charge - Confirm 
               If you were pregnant or getting benefits at the time you claimed, you may have been entitled to free NHS dental treatment.
             </div>
           </div>
-
-          <div class="nhsuk-radios__item">
-            <input class="nhsuk-radios__input" id="example-hints-3" name="example-hints" type="radio" value="not" aria-describedby="example-hints-3-item-hint">
-            <label class="nhsuk-label nhsuk-radios__label" for="example-hints-3">
-              I was not entitled to free NHS dental treatment but have an exceptional reason why I made the claim
-            </label>
-            <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-3-item-hint">
-              If you were not entitled to free NHS dental treatment but have an exceptional reason why you made the claim, you can ask us to review your Penalty Charge Notice. Find out if you can ask for a review.
-            </div>
-          </div>
-    
         </div>
+
       </fieldset>
-    
     </div>
+
+    <details class="nhsuk-details">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          I was not entitled to free NHS dental treatment but have an exceptional reason why I made the claim
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+        <p>If you were not entitled to free NHS dental treatment but have an exceptional reason why you made the claim, you can ask us to review your Penalty Charge Notice. Find out if you can ask for a review.</p>    
+      </div>
+    </details>
+
    <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
       Continue
     </button>
