--- a/app/views/v6-pcn-decs/we-found-a-hc3-cert-recalculated.html
+++ b/app/views/v6-pcn-decs/we-found-a-hc3-cert-recalculated.html
@@ -136,7 +136,7 @@ We found an HC3 certificate and have recalculated your penalty charge - Confirm 
         </span>
       </summary>
       <div class="nhsuk-details__text">
-        <p>If you were not entitled to free NHS dental treatment but have an exceptional reason why you made the claim, you can ask us to review your Penalty Charge Notice. Find out if you can ask for a review.</p>    
+        <p>If you were not entitled to free NHS dental treatment but have an exceptional reason why you made the claim, you can ask us to review your Penalty Charge Notice. <a href="https://tecs-2022.herokuapp.com/v6-pcn-decs/who-can-ask-for-review">Find out if you can ask for a review</a>.</p>    
       </div>
     </details>
 
