Contact details fix

--- a/app/views/v6-pcn/exemption-found-refund.html
+++ b/app/views/v6-pcn/exemption-found-refund.html
@@ -35,8 +35,8 @@ Exemption found refund
       <h2>Get a refund</h2>
       <p>You may be entitled to a refund. Contact us to find out how you can claim this.</p>
       <p>You can contact us by:</p>
-      <p><strong>Email</strong>: <a href="mailto:someone@example.com">nhsbsa.pecs@nhsbsa.nhs.uk</a></p>
-      <p><strong>Telephone</strong>: 0300 330 9291</p>
+      <p><strong>Email</strong>: <a href="mailto:someone@example.com">nhsbsa.decs@nhsbsa.nhs.uk</a></p>
+      <p><strong>Telephone</strong>: 0300 330 1293</p>
       <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Find out about call charges and
           other ways to contact us on our website</a>.</p>
 
