--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -410,79 +410,80 @@ NHS.UK prototype kit
                 <table class="nhsuk-table">
                     <thead role="rowgroup" class="nhsuk-table__head">
                         <tr role="row">
-                        <th role="columnheader" class="" scope="col">
-                            Page title
-                        </th>
-                        <th role="columnheader" class="" scope="col">
-                            URL
-                        </th>
-                        <th role="columnheader" class="" scope="col">
-                            PECS/DECS
-                        </th>
+                            <th role="columnheader" class="" scope="col">
+                                Page title
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                URL
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                PECS/DECS
+                            </th>
                         </tr>
                     </thead>
 
                     <tbody class="nhsuk-table__body">
                         <tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell">More information needed</td>
-                        <td class="nhsuk-table__cell"><a href="v5-enquiry/adhoc-screens/cannot-confirm-3rd">3rd attempt
-                            failed</a></td>
-                        <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                            <td class="nhsuk-table__cell">More information needed</td>
+                            <td class="nhsuk-table__cell"><a href="v5-enquiry/adhoc-screens/cannot-confirm-3rd">3rd attempt
+                                failed</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell">Cannot set up direct debit</td>
-                        <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/cannot-set-up-direct-debit">Direct debit
-                            error
-                            failed</a></td>
-                        <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                            <td class="nhsuk-table__cell">Cannot set up direct debit</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/cannot-set-up-direct-debit">Direct debit
+                                error
+                                failed</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell">Payment not authorised</td>
-                        <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/payment-not-authorised">Payment error
-                            failed</a></td>
-                        <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                            <td class="nhsuk-table__cell">Payment not authorised</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/payment-not-authorised">Payment error
+                                failed</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
 
                         <tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell">Payment not collected</td>
-                        <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/payment-not-collected">Payment error
-                            failed</a></td>
-                        <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                            <td class="nhsuk-table__cell">Payment not collected</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/payment-not-collected">Payment error
+                                failed</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
-        
                         <tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell">Payment cancelled</td>
-                        <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/payment-has-been-cancelled">Payment
-                            cancelled
-                            failed</a></td>
-                        <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                            <td class="nhsuk-table__cell">Payment cancelled</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/payment-has-been-cancelled">Payment
+                                cancelled
+                                failed</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
+
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Payment timed out</td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/payment-has-timed-out">Payment error time out
                                 </a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
-                            </tr>
-
-                        
-                        <tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell">Your exemption certificate was not valid at the time you claimed</td>
-                        <td class="nhsuk-table__cell"><a href="v6-pcn/exemption-cert-not-valid-pcn-pecs">Exemption cert not valid
-                            PCN PECS</a></td>
-                        <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell">Your exemption certificate was not valid at the time you claimed</td>
-                        <td class="nhsuk-table__cell"><a href="v6-pcn/exemption-cert-not-valid-pcn-decs">Exemption cert not valid
-                            PCN DECS</a></td>
-                        <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
-                            DECS
-                            </strong></td>
+                            <td class="nhsuk-table__cell">Your exemption certificate was not valid at the time you claimed</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/exemption-cert-not-valid-pcn-pecs">Exemption cert not valid
+                                PCN PECS</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Your exemption certificate was not valid at the time you claimed</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/exemption-cert-not-valid-pcn-decs">Exemption cert not valid
+                                PCN DECS</a></td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
@@ -499,7 +500,7 @@ NHS.UK prototype kit
                             <td class="nhsuk-table__cell"><a href="v6-pcn/we-could-not-verify-your-details">We could not verify
                                 your details</a></td>
                                 <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
-                                BOTH
+                              
                                 </strong></td>
                             </tr>
 
@@ -507,15 +508,15 @@ NHS.UK prototype kit
                                 <td class="nhsuk-table__cell">We have tried to find your updated details</td>
                                 <td class="nhsuk-table__cell"><a href="v6-pcn/we-have-tried-to-find-your-updated-details">We still could not verify your updated details</a></td>
                                     <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
-                                    BOTH
+                                  
                                     </strong></td>
-                                </tr>
+                            </tr>
 
                                 <tr role="row" class="nhsuk-table__row">
                                     <td class="nhsuk-table__cell">This page is no longer available</td>
                                     <td class="nhsuk-table__cell"><a href="v6-pcn/page-not-found">Page not found</a></td>
                                         <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
-                                        BOTH
+                                        
                                         </strong></td>
                                     </tr>
 
@@ -712,43 +713,6 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">We found a HC3 certificate - recalculated</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-recalculated">We found a HC3 certificate - recalculated</a>
-                            </td>
-                            <td class="nhsuk-table__cell">
-                                <strong class="nhsuk-tag nhsuk-tag--green">
-                                    DECS
-                                </strong>
-                            </td>
-                        </tr>
-                        
-                        <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">We found a HC3 certificate with a higher contribution amount (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-high-surcharge">We found a hc3 cert higher (surcharge)</a>
-                            </td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
-                                DECS
-                                </strong></td>
-                        </tr>
-
-                        <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">We found a HC3 certificate with a lower contribution amount (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower-surcharge">We found a hc3 cert lower (surcharge)</a>
-                            </td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
-                                DECS
-                                </strong></td>
-                        </tr>
-
-                        <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">We found a HC3 certificate with the same contribution amount (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same-surcharge">We found a hc3 cert same (surcharge)</a></td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
-                                DECS
-                                </strong></td>
-                        </tr>
-
-                        <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Penalty Charge Notice details Hc3</td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn/penalty-charge-details-hc3-decs">Penalty Charge Notice
                                 Hc3</a></td>
@@ -764,6 +728,70 @@ NHS.UK prototype kit
                             </td>
                             <td class="nhsuk-table__cell">
                                 <strong class="nhsuk-tag">BOTH</strong>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h3>HC3 Ceritificate surcharge pages</h3>
+
+                <table class="nhsuk-table">
+                    <thead role="rowgroup" class="nhsuk-table__head">
+                        <tr role="row">
+                            <th role="columnheader" class="" scope="col">
+                                Page title
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                URL
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                PECS/DECS
+                            </th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="nhsuk-table__body">
+                        <tr role="row" class="nhsuk-table__row">
+                        </tr>
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We found a HC3 certificate (Recalculated)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-recalculated">We found a HC3 certificate (recalculated)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
+                        </tr>
+                        
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We found a HC3 certificate with a higher contribution amount (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-high-surcharge">We found a hc3 cert higher (surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                DECS
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We found a HC3 certificate with a lower contribution amount (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower-surcharge">We found a hc3 cert lower (surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We found a HC3 certificate with the same contribution amount (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same-surcharge">We found a hc3 cert same (surcharge)</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                                DECS
+                                </strong>
                             </td>
                         </tr>
                     </tbody>
