--- a/app/views/layout-gov.html
+++ b/app/views/layout-gov.html
@@ -14,7 +14,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-  GOV UK Payment details
+  GOV.UK Payment details
 {% endblock %}
 
 <!-- Edit the header -->
@@ -26,9 +26,6 @@
   
     <link rel="stylesheet" href="/sass/govuk-frontend-4.1.0.min.css">
 
-
-
-  
       <div class="govuk-header__container govuk-width-container">
         <div class="govuk-header__logo">
           <a href="#" class="govuk-header__link govuk-header__link--homepage">
@@ -57,6 +54,23 @@
 {% endblock %}
 
 <style>
+
+@font-face{
+  font-family:"GDS Transport";
+  font-style:normal;
+  font-weight:400;
+  src:url(/assets/fonts/light-94a07e06a1-v2.woff2) format("woff2"),url(/assets/fonts/light-f591b13f7d-v2.woff) format("woff");
+  font-display:fallback
+}
+
+@font-face{
+  font-family:"GDS Transport";
+  font-style:normal;
+  font-weight:700;
+  src:url(/assets/fonts/bold-b542beb274-v2.woff2) format("woff2"),url(/assets/fonts/bold-affa96571d-v2.woff) format("woff");
+  font-display:fallback
+}
+
 .govuk-footer {
     font-family: "GDS Transport",arial,sans-serif;
     -webkit-font-smoothing: antialiased;
