--- a/app/views/v6-pcn/gov-pay-apple-pay.html
+++ b/app/views/v6-pcn/gov-pay-apple-pay.html
@@ -22,9 +22,18 @@ GOV.UK prototype kit
 						Total amount:
 					</p>
 
-					<span id="amount" class="govuk-heading-l" style="padding-top: 0px; margin-bottom: 0px;">£9.65</span>
+					<span id="amount" class="govuk-heading-l" style="padding-top: 0px; margin-bottom: 0px;">£50.00</span>
 				</div>
 
+        		<h3 class="govuk-heading-m">Pay with Apple Pay</h3>
+
+				<a href="#" class="apple-pay-button nhsuk-u-margin-bottom-4">
+					 Pay
+				</a>
+
+				<p class="or-lines">
+					or
+				</p>
 
 				<h3 class="govuk-heading-m">Enter card details</h3>
 
