--- a/docs/views/template-gov.html
+++ b/docs/views/template-gov.html
@@ -50,6 +50,7 @@
 
     {% block headCSS %}
       <link href="/css/main.css" rel="stylesheet">
+      <link rel="stylesheet" href="/assets/sass/govuk-frontend-4.1.0.min.css">
     {% endblock %}
 
     {% block customStyles %}
@@ -58,16 +59,10 @@
     <script src="/nhsuk-frontend/nhsuk.min.js" defer></script>
 
     {% block headIcons %}
-    <link rel="shortcut icon" href="/nhsuk-frontend/assets/favicons/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="/nhsuk-frontend/assets/favicons/apple-touch-icon-180x180.png">
-    <link rel="mask-icon" href="/nhsuk-frontend/assets/favicons/favicon.svg" color="#005eb8">
-    <link rel="icon" sizes="192x192" href="/nhsuk-frontend/assets/favicons/favicon-192x192.png">
-    <meta name="msapplication-TileImage" content="/nhsuk-frontend/assets/favicons/mediumtile-144x144.png">
-    <meta name="msapplication-TileColor" content="#005eb8">
-    <meta name="msapplication-square70x70logo" content="/nhsuk-frontend/assets/favicons/smalltile-70x70.png">
-    <meta name="msapplication-square150x150logo" content="/nhsuk-frontend/assets/favicons/mediumtile-150x150.png">
-    <meta name="msapplication-wide310x150logo" content="/nhsuk-frontend/assets/favicons/widetile-310x150.png">
-    <meta name="msapplication-square310x310logo" content="/nhsuk-frontend/assets/favicons/largetile-310x310.png">
+    <link rel="shortcut icon" href="/images/gov-favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/images/gov-icon-180.png">
+    <link rel="mask-icon" href="/images/gov-favicon.svg" color="#005eb8">
+    <link rel="icon" sizes="192x192" href="/images/gov-icon-192.png">
     {% endblock %}
 
     {% block head %}{% endblock %}
