Google pay page done

--- a/app/assets/sass/components/_gov-styles.scss
+++ b/app/assets/sass/components/_gov-styles.scss
@@ -106,6 +106,12 @@
   font-weight: 400;
 }
 
+.apple-pay-button svg {
+  position: relative;
+  top: 3px;
+  margin-left: 2px;
+}
+
   /* GDS styles */
 
   .govuk-fieldset__legend {
