--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -796,6 +796,49 @@ NHS.UK prototype kit
                         </tr>
                     </tbody>
                 </table>
+
+                <h3>Gov Pay - Apple Pay and Google Pay page examaples</h3>
+
+                <table class="nhsuk-table">
+                    <thead role="rowgroup" class="nhsuk-table__head">
+                        <tr role="row">
+                            <th role="columnheader" class="" scope="col">
+                                Page title
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                URL
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                PECS/DECS
+                            </th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="nhsuk-table__body">
+ 
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Apple Pay (Full payment)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/gov-pay-apple-pay">Apple Pay (Full payment)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag">
+                                    BOTH
+                                </strong>
+                            </td>
+                        </tr>
+                        
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Google Pay (Full payment)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/gov-pay-google-pay">Google Pay (Full payment)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag">
+                                    BOTH
+                                </strong>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </details>
 
