--- a/app/views/v6-pcn-decs/we-found-a-hc3-cert-same-pcn.html
+++ b/app/views/v6-pcn-decs/we-found-a-hc3-cert-same-pcn.html
@@ -24,8 +24,8 @@ We found a Hc3 cert with same contribution
       <div class="nhsuk-card__content">
         <h2 class="nhsuk-card__heading">
           Original Penalty Charge Notice amount
+        </h2>
 
-        </h3>
         <dl class="nhsuk-summary-list nhsuk-summary-list">
 
           <div class="nhsuk-summary-list__row">
@@ -81,21 +81,39 @@ We found a Hc3 cert with same contribution
             <dd class="nhsuk-summary-list__value">
               £71.50
             </dd>
+          </div>
 
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Total amount to pay 
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              <strong>£71.50</strong>
+            </dd>
+          </div>
         </dl>
-      
-    
+
+        <h2 class="nhsuk-card__heading">
+          Previous payments
+        </h2>
+
+        <dl class="nhsuk-summary-list nhsuk-summary-list">
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Payments made
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              £0.00
+            </dd>
+          </div>
         </dl>
+
         <p style="font-weight: bold; font-size:36px;">
-         Total amount to pay: £85.80
-
+         Amount still to pay: £85.80
         </p>
-
       </div>
     </div>
-
-    
-    
 
     <div class="nhsuk-form-group">
 
