Fixed issue with body class

--- a/docs/views/template-gov.html
+++ b/docs/views/template-gov.html
@@ -69,7 +69,7 @@
     
   </head>
 
-  <body class="{{ bodyClasses }}">
+  <body class="gov-body">
 
     <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
     {% block bodyStart %}{% endblock %}
