--- a/app/assets/sass/components/_gov-styles.scss
+++ b/app/assets/sass/components/_gov-styles.scss
@@ -478,7 +478,7 @@
     background-color: #fff;
   }
 
-  body {
+  .gov-body {
     background-color: #fff;
     color: #212b32;
     font-size: 16px;
