DECS HC3 screens updated

--- a/app/views/v6-pcn-decs/we-found-a-hc3-cert-high-surcharge.html
+++ b/app/views/v6-pcn-decs/we-found-a-hc3-cert-high-surcharge.html
@@ -96,14 +96,26 @@ We found a Hc3 cert with higher contribution
           </div>
 
         </dl>
-      
-    
+
+        <h2 class="nhsuk-card__heading">
+          Previous payments
+        </h2>
+
+        <dl class="nhsuk-summary-list nhsuk-summary-list">
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Payments made
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              £0.00
+            </dd>
+          </div>
         </dl>
+
         <p style="font-weight: bold; font-size:36px;">
-         Total amount to pay: £121.55
-
+          Amount still to pay: £121.55
         </p>
-
       </div>
     </div>
 
