--- a/app/views/v6-pcn-decs/we-found-a-hc3-cert-lower-surcharge.html
+++ b/app/views/v6-pcn-decs/we-found-a-hc3-cert-lower-surcharge.html
@@ -25,7 +25,6 @@ We found a Hc3 cert with lower contribution
       <div class="nhsuk-card__content">
         <h2 class="nhsuk-card__heading">
           Recalculated Penalty Charge Notice amount
-
         </h3>
         <dl class="nhsuk-summary-list nhsuk-summary-list">
 
@@ -95,12 +94,25 @@ We found a Hc3 cert with lower contribution
           </div>
 
         </dl>
-      
-    
-        </dl>
-        <p style="font-weight: bold; font-size:36px;">
-         Total amount to pay: £121.55
 
+        <h2 class="nhsuk-card__heading">
+          Previous payments
+        </h2>
+
+        <dl class="nhsuk-summary-list nhsuk-summary-list">
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Payments made
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              £0.00
+            </dd>
+          </div>
+        </dl>
+
+        <p style="font-weight: bold; font-size:36px;">
+          Amount still to pay: £121.55
         </p>
 
       </div>
