Surcharge screen fixes

--- a/app/views/v6-pcn-decs/we-found-a-hc3-cert-same-surcharge.html
+++ b/app/views/v6-pcn-decs/we-found-a-hc3-cert-same-surcharge.html
@@ -81,7 +81,6 @@ We found a Hc3 cert with same contribution
             <dd class="nhsuk-summary-list__value">
               £71.50
             </dd>
-
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
@@ -90,7 +89,15 @@ We found a Hc3 cert with same contribution
             <dd class="nhsuk-summary-list__value">
               £35.75
             </dd>
+          </div>
 
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Total amount to pay 
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              <strong>£121.50</strong>
+            </dd>
           </div>
 
         </dl>
