--- a/app/views/v6-pcn-decs/we-found-a-hc3-cert-lower-surcharge.html
+++ b/app/views/v6-pcn-decs/we-found-a-hc3-cert-lower-surcharge.html
@@ -93,6 +93,15 @@ We found a Hc3 cert with lower contribution
 
           </div>
 
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Total amount to pay 
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              <strong>£121.50</strong>
+            </dd>
+          </div>
+
         </dl>
 
         <h2 class="nhsuk-card__heading">
