Surcharge DECS DD screens - WIP

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -766,7 +766,7 @@ NHS.UK prototype kit
                         
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with a higher contribution amount (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-high-surcharge">We found a hc3 cert higher (surcharge)</a>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-high-surcharge">We found a HC3 cert higher (surcharge)</a>
                             </td>
                             <td class="nhsuk-table__cell">
                                 <strong class="nhsuk-tag nhsuk-tag--green">
@@ -777,7 +777,7 @@ NHS.UK prototype kit
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with a lower contribution amount (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower-surcharge">We found a hc3 cert lower (surcharge)</a>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower-surcharge">We found a HC3 cert lower (surcharge)</a>
                             </td>
                             <td class="nhsuk-table__cell">
                                 <strong class="nhsuk-tag nhsuk-tag--green">
@@ -788,12 +788,89 @@ NHS.UK prototype kit
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with the same contribution amount (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same-surcharge">We found a hc3 cert same (surcharge)</a></td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same-surcharge">We found a HC3 cert same (surcharge)</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                                 DECS
                                 </strong>
                             </td>
                         </tr>
+                    </tbody>
+                </table>
+
+                <h3>Direct Debit surcharge pages</h3>
+
+                <table class="nhsuk-table">
+                    <thead role="rowgroup" class="nhsuk-table__head">
+                        <tr role="row">
+                            <th role="columnheader" class="" scope="col">
+                                Page title
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                URL
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                PECS/DECS
+                            </th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="nhsuk-table__body">
+
+                        <!-- <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your active Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="#">View your active Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--blue">
+                                    PECS
+                                </strong>
+                            </td>
+                        </tr> -->
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your active Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/view-your-active-dd-surcharge">View your active Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your rejected Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/view-your-rejected-dd-surcharge">View your rejected Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your blocked Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/view-your-blocked-dd-surcharge">View your blocked Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your cancelled Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/view-your-cancelled-dd-surcharge">View your cancelled Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
+                        </tr>
+
                     </tbody>
                 </table>
 
