--- a/app/views/v6-pcn-decs/view-your-active-dd-surcharge.html
+++ b/app/views/v6-pcn-decs/view-your-active-dd-surcharge.html
@@ -45,39 +45,69 @@ Penalty Charge Notice details on hold
 
         </h3>
         <dl class="nhsuk-summary-list nhsuk-summary-list">
-
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Prescription charges
+              Dental treatment charges
             </dt>
             <dd class="nhsuk-summary-list__value">
               £17.60
             </dd>
-
           </div>
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-               Penalty Charge 
+               HC3 Contribution
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              £54.40
+            </dd>
+          </div>
+                    
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Amount you should have paid
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              £14.70
+            </dd>
+          </div>
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Amount you've already paid
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              £0.00
+            </dd>
+          </div>
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Oustanding Treatment Charge
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              £14.70
+            </dd>
+          </div>
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Penalty charge
             </dt>
             <dd class="nhsuk-summary-list__value">
               £48.25
             </dd>
-
-        
-
           </div>
-          
-          
+
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
               Total amount to pay
             </dt>
             <dd class="nhsuk-summary-list__value">
-              <b>£57.90</b>
+              <strong>£57.90</strong>
             </dd>
-
           </div>
+
         </dl>
 
       
@@ -100,11 +130,12 @@ Penalty Charge Notice details on hold
 
         </dl>
         <p style="font-weight: bold; font-size:36px;">
-         Amount still to pay: £50
+         Amount still to pay: £50.00
         </p>
 
       </div>
     </div>
+    
     <p>If you have recently made a payment, it can take 24 hours for payment information to update.</p>
 
     <h3>Details on the prescription</h3>
